refactoring code : edit permissions and assignment to roles