@@ -14,15 +14,43 @@ import static com.example.aftas.shared.Enum.Permission.*;
 @Getter
 @RequiredArgsConstructor
 public enum Role {
-    ADHERENT(Collections.emptySet()),
+    ADHERENT(Set.of(
+            COMPETITION_READ
+    )),
     JURY(Set.of(
             COMPETITION_MANAGE,
-            COMPETITION_EVALUATE
+            COMPETITION_EVALUATE,
+            COMPETITION_READ,
+            FISH_READ,
+            FISH_WRITE,
+            FISH_DELETE,
+            HUNTING_READ,
+            HUNTING_WRITE,
+            LEVEL_READ,
+            LEVEL_WRITE,
+            RANKING_READ,
+            RANKING_WRITE,
+            USER_READ,
+            USER_WRITE,
+            USER_DELETE
     )),
     MANAGER(Set.of(
             COMPETITION_MANAGE,
             COMPETITION_EVALUATE,
-            USER_MANAGE
+            COMPETITION_READ,
+            FISH_READ,
+            FISH_WRITE,
+            FISH_DELETE,
+            HUNTING_READ,
+            HUNTING_WRITE,
+            LEVEL_READ,
+            LEVEL_WRITE,
+            RANKING_READ,
+            RANKING_WRITE,
+            USER_READ,
+            USER_WRITE,
+            USER_DELETE,
+            USER_CHANGE_ROLE
     ));
 
     private final Set<Permission> permissions;
